Add Venison Vindaloo page

--- a/recipes/venison-vindaloo.html
+++ b/recipes/venison-vindaloo.html
@@ -6,5 +6,64 @@
     </head>
     <body>
         <h1>Venison Vindaloo</h1>
+        <img src="../images/venison-vindaloo.jpg" width="838" height="412" alt="An image of Venison Vindaloo">
+        <h2>Description</h2>
+        <p>A recipe for Venison Vindaloo (usually a pork recipe) by the Omnivore Indian (link below).</p>
+        <p>I've tried it - it's delicious! Venison benefits from the extra cooking time, being a tough meat to cook.</p>
+        <a href="https://www.youtube.com/watch?v=RZpBA-xnucM" target="_blank" rel="noopener noreferrer">Venison Vindaloo</a>
+        <h2>Ingredients</h2>
+        <h3>For the Marinade</h3>
+        <ul>
+            <li>Diced Venison 600g</li>
+            <li>2 Dried red chillis</li>
+            <li>4 cloves</li>
+            <li>4 cinammon sticks</li>
+            <li>Black peppercorns</li>
+            <li>6 green cardamon pods</li>
+            <li>1 teaspoon of cumin seeds</li>
+            <li>1 teaspoon of ginger paste</li>
+            <li>1 teaspoon of garlic paste</li>
+            <li>Juice of half a lemon</li>
+        </ul>
+        <h3>For the Vindaloo</h3>
+        <ul>
+            <li>2 dried red chillis</li>
+            <li>1 teaspoon of black peppercorns</li>
+            <li>1 teaspoon of turmeric powder</li>
+            <li>1 teaspoon of cumin powder</li>
+            <li>4 cloves of garlic</li>
+            <li>1 large red onion</li>
+            <li>1 can of chopped tomatoes</li>
+            <li>3 to 4 tablespoons of red wine vinegar</li>
+            <li>2 teaspoons of salt</li>
+            <li>1 to 2 cups of water</li>
+            <li>Fresh corriander to garnish</li>
+        </ul>
+        <h2>Directions</h2>
+        <h3>Marinating the meat</h3>
+        <ol>
+            <li>Fry the whole spices in a medium heat dry pan for a minute or two</li>
+            <li>Grind the roasted spices into a powder</li>
+            <li>Add the lemon juice, garlic paste, ginger paste, then the ground spices to the meat, mixing them in thoroughly</li>
+            <li>Cover and marinate the meat in the fridge for at least 24 hours</li>
+        </ol>
+        <h3>Cooking</h3>
+        <ol>
+            <li>Finely chop the garlic</li>
+            <li>Dice the red onion</li>
+            <li>Heat some oil in a heavy-bottomed pot</li>
+            <li>Add the dry chillis and the chopped garlic to the pot and stir</li>
+            <li>Add the red onions and fry for 2 to 3 minutes or until soft</li>
+            <li>Add the turmeric and cumin powder as well as the red wine vinegar, stir for a minute</li>
+            <li>Add the chopped tomatoes, frying for 2 to 3 minutes</li>
+            <li>Add the marinated venison to the pot, stiring on high heat for a few minutes</li>
+            <li>Stir in the salt, and add the water and bring to a boil</li>
+            <li>Cover and cook on a low heat for 45 minutes</li>
+            <li>Grind the peppercorns</li>
+            <li>After the meat has been cooking for 45 minutes, check to see if cooked. If there is too much water, uncover and cook on high heat to reduce, stiring the meat</li>
+            <li>When the sauce is thick add the ground peppercorns and garnish with chopped corriander</li>
+            <li>Stir and serve, garnishing with more corriander if desired</li>
+            <li>Serve with naan, rice, or another carb of your choosing!</li>
+        </ol>
     </body>
 </html>
