--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/venison-vindaloo">Venison Vindaloo</a>
+        <a href="./recipes/venison-vindaloo.html">Venison Vindaloo</a>
     </body>
 </html>
