--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/venison-vindaloo.html">Venison Vindaloo</a>
+        <ul>
+            <li><a href="./recipes/venison-vindaloo.html">Venison Vindaloo</a></li>
+            <li><a href="./recipes/coffee-banana-bread.html">Coffee Banana Bread</a></li>
+        </ul>
     </body>
 </html>
