Add bagel recipe and image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/venison-vindaloo.html">Venison Vindaloo</a></li>
             <li><a href="./recipes/coffee-banana-bread.html">Coffee Banana Bread</a></li>
+            <li><a href="./recipes/bagels.html">Bagels</a></li>
         </ul>
     </body>
 </html>
