--- a/recipes/coffee-banana-bread.html
+++ b/recipes/coffee-banana-bread.html
@@ -9,7 +9,7 @@
         <img src="../images/coffee-banana-bread.jpg" width="1600" height="900" alt="Coffee Banana Bread">
         <h2>Description</h2>
         <p>A recipe for Coffee Banana Bread yoinked from the BBC food pages.</p>
-        <a href="https://www.bbc.co.uk/food/recipes/instant_coffee_banana_01958" target="_blank" rel="noopener noreferrer">Coffee Banan Bread</a>
+        <a href="https://www.bbc.co.uk/food/recipes/instant_coffee_banana_01958" target="_blank" rel="noopener noreferrer">Coffee Banana Bread</a>
         <h2>Ingredients</h2>
         <ul>
             <li>3 very ripe bananas, peeled and roughly chopped</li>
@@ -28,5 +28,6 @@
             <li>Mash the bananas in a bowl with the sugar, eggs, coffee, nutmeg and salt until everything is thoroughly combined. Stir in the butter, flour and chocolate, if using. Pour into the tin and bake for 50 minutes</li>
             <li>Remove from the oven and leave to cool slightly in the tin. Turn out onto a wire rack to cool completely and then serve in slices</li>
         </ol>
+        <a href="../index.html">Return</a>
     </body>
 </html>
