--- a/recipes/venison-vindaloo.html
+++ b/recipes/venison-vindaloo.html
@@ -65,5 +65,6 @@
             <li>Stir and serve, garnishing with more corriander if desired</li>
             <li>Serve with naan, rice, or another carb of your choosing!</li>
         </ol>
+        <a href="../index.html">Return</a>
     </body>
 </html>
