Add style.css to the html

--- a/recipes/coffee-banana-bread.html
+++ b/recipes/coffee-banana-bread.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Coffee Banana Bread</title>
     </head>
     <body>
-        <h1>Coffee Banana Bread</h1>
+        <h1 class="heading">Coffee Banana Bread</h1>
         <img src="../images/coffee-banana-bread.jpg" width="1600" height="900" alt="Coffee Banana Bread">
         <h2>Description</h2>
         <p>A recipe for Coffee Banana Bread yoinked from the BBC food pages.</p>
