--- a/recipes/bagels.html
+++ b/recipes/bagels.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charsett="utf-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Bagels</title>
     </head>
     <body>
