--- a/recipes/venison-vindaloo.html
+++ b/recipes/venison-vindaloo.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="en">
+        <link rel="stylesheet" href="../style.css">
         <title>Venison Vindaloo</title>
     </head>
     <body>
